--- a/test/fixtures/instruments.yml
+++ b/test/fixtures/instruments.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+vocals:
+  id: 1
+  name: Vocals
+  category: vocal
 
-two:
-  name: MyString
+guitar:
+  id: 2
+  name: Guitar
+  category: string
