--- a/test/fixtures/profile_created_bands.yml
+++ b/test/fixtures/profile_created_bands.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  profile: one
-  title: MyString
-  description: MyString
+# one:
+#   profile: one
+#   title: MyString
+#   description: MyString
 
-two:
-  profile: two
-  title: MyString
-  description: MyString
+# two:
+#   profile: two
+#   title: MyString
+#   description: MyString
